--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="about" id="about">
 
-        <h1 class="heading"> Sobre nos </h1>
+        <h1 class="heading"> Sobre nós </h1>
 
         <div class="row">
 
@@ -70,7 +70,7 @@
 
     <section class="services" id="services">
 
-        <h1 class="heading"> our services</h1>
+        <h1 class="heading"> Serviços</h1>
 
         <div class="box-container">
 
